turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:34: error: identifier expected but '}' found.
}
^